--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-image-crop": "^11.0.10",
     "react-leaflet": "^5.0.0",
     "recharts": "^2.15.1",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
